# src/router/adminRoute.ts
@@ -5,22 +5,27 @@ const controllerAdmin = new AdminController();
 
 const adminRouter = express.Router();
 
-adminRouter.post("/createUser",
-    //#swagger.tags = ['Admin']
-    //#swagger.parameters['name'] = {in:'formData',type:'string',required:true} 
-    //#swagger.parameters['password'] = {in:'formData',type:'string',required:true} 
-    //#swagger.parameters['roll'] = {in:'formData',type:'string',required:true} 
-controllerAdmin.createUser)
+adminRouter.post(
+  "/createUser",
+  //#swagger.tags = ['Admin']
+  //#swagger.parameters['name'] = {in:'formData',type:'string',required:true}
+  //#swagger.parameters['password'] = {in:'formData',type:'string',required:true}
+  //#swagger.parameters['roll'] = {in:'formData',type:'string',required:true}
+  controllerAdmin.createUser
+);
 
-adminRouter.post("/loginUser",
-    //#swagger.tags = ['Admin']
-    //#swagger.parameters['name'] = {in:'formData',type:'string',required:true} 
-    //#swagger.parameters['password'] = {in:'formData',type:'string',required:true}
-controllerAdmin.loginUser)
+adminRouter.post(
+  "/loginUser",
+  //#swagger.tags = ['Admin']
+  //#swagger.parameters['name'] = {in:'formData',type:'string',required:true}
+  //#swagger.parameters['password'] = {in:'formData',type:'string',required:true}
+  controllerAdmin.loginUser
+);
 
-
-adminRouter.get("/check",authVerify(["admin","BA"]),
-//#swagger.tags = ['Admin']
+adminRouter.get(
+  "/check",
+  authVerify(["admin", "BA"]),
+  //#swagger.tags = ['Admin']
   (req, res) => {
     res.json({
       success: true,
@@ -30,44 +35,66 @@ adminRouter.get("/check",authVerify(["admin","BA"]),
   }
 );
 
-
-
-adminRouter.post("/createService",
+adminRouter.post(
+  "/createService",
   //#swagger.tags = ['Admin']
   //#swagger.parameters['name'] = {in:'formData',type:'string',required:true}
   controllerAdmin.createService
-)
-adminRouter.patch("/editService",
+);
+adminRouter.patch(
+  "/editService",
   //#swagger.tags = ['Admin']
   //#swagger.parameters['id'] = {in:'formData',type:'string',required:true}
   //#swagger.parameters['name'] = {in:'formData',type:'string',required:true}
   controllerAdmin.editService
-)
-adminRouter.delete("/deleteService",
+);
+adminRouter.delete(
+  "/deleteService",
   //#swagger.tags = ['Admin']
   //#swagger.parameters['id'] = {in:'formData',type:'string',required:true}
   controllerAdmin.deleteService
-)
+);
 
-
-adminRouter.post("/createDepartment",
+adminRouter.post(
+  "/createDepartment",
   //#swagger.tags = ['Admin']
   //#swagger.parameters['name'] = {in:'formData',type:'string',required:true}
   controllerAdmin.createDepartment
-)
-adminRouter.patch("/editDepartment",
+);
+adminRouter.patch(
+  "/editDepartment",
   //#swagger.tags = ['Admin']
   //#swagger.parameters['id'] = {in:'formData',type:'string',required:true}
   //#swagger.parameters['name'] = {in:'formData',type:'string',required:true}
   controllerAdmin.editDepartment
-)
-adminRouter.delete("/deleteDepartment",
+);
+adminRouter.delete(
+  "/deleteDepartment",
   //#swagger.tags = ['Admin']
   //#swagger.parameters['id'] = {in:'formData',type:'string',required:true}
   controllerAdmin.deleteDepartment
-)
+);
 
+adminRouter.post(
+  "/createCandidateRoll",
+  //#swagger.tags = ['Admin']
+  //#swagger.parameters['name'] = {in:'formData',type:'string',required:true}
+  controllerAdmin.createCandidateRoll
+);
+adminRouter.patch(
+  "/editCandidateRoll",
+  //#swagger.tags = ['Admin']
+  //#swagger.parameters['id'] = {in:'formData',type:'string',required:true}
+  //#swagger.parameters['name'] = {in:'formData',type:'string',required:true}
+  controllerAdmin.editCandidateRoll
+);
 
+adminRouter.delete(
+  "/deleteCandiateRoll",
+  //#swagger.tags = ['Admin']
+  //#swagger.parameters['id'] = {in:'query',type:'string',required:true}
+  controllerAdmin.deleteCandidateRoll
+);
 
 
 
